fix(문제5): 화폐 갯수 기록 오류 수정